# Blitz-API

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  make_celery.py  nginx.conf  pyproject.toml  to-do.txt
blitz_api/: __init__.py  db.py  run_celery.py
blitz_api/config/: __init__.py  resource.py  swagger.py
blitz_api/controllers/: __init__.py  generate.py  hello.py  obj_3d.py
blitz_api/ext/: __init__.py  celery_factory.py  db.py
blitz_api/ext/tasks/: __init__.py  add.py  generate.py
blitz_api/ext/tasks/models/: pyproject.toml  steps.txt
blitz_api/ext/tasks/models/human_pose_estimation/: demo.py  rect.py
blitz_api/ext/tasks/models/lightweight-human-pose-estimation.pytorch/: rect.py
blitz_api/ext/tasks/models/pifuhd/: requirements.txt
blitz_api/ext/tasks/models/pifuhd/apps/: make.py  recon.py
blitz_api/ext/tasks/models/pifuhd/lib/data/: EvalWPoseDataset.py
blitz_api/ext/tasks/models/pifuhd/sample_images/: female_rect.txt
