[tool.poetry]
name = "blitz-api"
version = "0.1.0"
description = "A RESTful service for the Blitz application."
authors = ["Romulus Darwin <darwinromulus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
marshmallow = "^3.20.2"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
