[tool.poetry]
name = "blitz-api"
version = "2.0.1"
description = "A RESTful service for the Blitz application."
authors = ["Romulus Darwin <darwinromulus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
marshmallow = "^3.20.2"
pillow = "^10.2.0"
pymongo = "^4.6.1"
flasgger = "0.9.7b2"
flask = "3.0.0"
celery = "^5.3.6"
redis = "^5.0.1"
torch = "^2.1.2"
torchvision = "^0.16.2"
scikit-image = "^0.22.0"
tqdm = "^4.66.1"
opencv-python = "^4.9.0.80"
trimesh = "^4.0.9"
pyopengl = "^3.1.7"
ffmpeg = "^1.4"
matplotlib = "^3.8.2"
pycocotools = "^2.0.7"
numpy = "^1.26.4"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
