[tool.poetry]
name = "pifu-testing"
version = "0.1.0"
description = ""
authors = ["SpoooKyHammer <spookyhammer2300@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.2"
torchvision = "^0.16.2"
pillow = "^10.2.0"
scikit-image = "^0.22.0"
tqdm = "^4.66.1"
opencv-python = "^4.9.0.80"
trimesh = "^4.0.9"
pyopengl = "^3.1.7"
ffmpeg = "^1.4"
matplotlib = "^3.8.2"
pycocotools = "^2.0.7"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
